--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sistenredebrasilrp_back-endv2",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "server.js",
   "scripts": {
