--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
     
-    - nome: Implantação FTP
-      usa: SamKirkland/FTP-Deploy-Action@4.3.0
+    - name: FTP Deploy
+      uses: SamKirkland/FTP-Deploy-Action@4.3.0
       with:
         server: ${{ secrets.ftp_server }}
         username: ${{ secrets.ftp_user }}
