--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/nodemailer": "^6.4.6",
+    "@types/request": "^2.48.8",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.0.1",
@@ -33,6 +34,7 @@
     "axios": "^1.2.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.11.0",
     "consultar-cnpj": "^1.0.15",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -40,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
+    "request": "^2.88.2",
     "sequelize": "^6.25.8"
   }
 }
