--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,18 @@
 {
-  "cSpell.words": ["Creat", "getcontador", "pesqisa", "Verific"]
+  "cSpell.words": [
+    "Axio",
+    "centralsms",
+    "Creat",
+    "enviarsms",
+    "getcontador",
+    "geterro",
+    "getnow",
+    "iten",
+    "mensagen",
+    "pesqisa",
+    "regerro",
+    "sendsms",
+    "sendvencimento",
+    "Verific"
+  ]
 }
